--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
   <title>Etch-a-Sketch</title>
-  <link rel="stylesheet" type="text/css" href="etchasketch.css" />
-  <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script type="text/javascript" src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-  <script type="text/javascript" src="pouchdb-3.6.0.min.js"></script>
-  <script type="text/javascript" src="etchasketch.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/etchasketch.css" />
+  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="js/pouchdb-3.6.0.min.js"></script>
+  <script type="text/javascript" src="js/etchasketch.js"></script>
 </head>
 <body>
   
